--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,8 @@
 PORT
 MONGODB_URI = mongodb+srv://pritamprajapati:<password>@cluster0.nslca.mongodb.net/
-CORS_ORIGIN
+CORS_ORIGIN 
+
+ ACCESS_TOKEN_SECRET = sc
+ ACCESS_TOKEN_EXPIRE = 1d
+ REFRESH_TOKEN_SECRET = sc
+ REFRESH_TOKEN_EXPIRE = 10d
